<resources>
    <string name="app_name">PusherSample</string>
    <string name="title_activity_channel">ChannelActivity</string>

    <!-- Menu Actions -->
    <string name="action_logout">Logout</string>
    <string name="action_unsubscribe">Unsubscribe</string>

    <!-- Main Activity -->
    <string name="subscribed_channels">Subscribed Channels</string>
    <string name="subscribing_to_channels_not_implemented">Subscribing to Channels is not yet implemented.</string>

    <!-- Channel Activity -->
    <string name="send_message">Send</string>
    <string name="message_cannot_be_blank">Message cannot be blank.</string>
    <string name="anonymous">Anomymous</string>
    <string name="cannot_unsubscribe_from_channel">Unsubscribe is not yet implemented.</string>
    <string name="by_user">"by %1$s"</string>

    <!-- Create Channel Activity -->
    <string name="create_channel">Create Channel</string>
    <string name="title_activity_create_channel">Create Channel</string>
    <string name="channel_name">Channel Name</string>
    <string name="channel_type">Channel Type</string>
    <string name="public_channel">Public</string>
    <string name="private_channel">Private</string>
    <string name="presence_channel">Presence</string>
    <string name="public_prefix">""</string>
    <string name="private_prefix">private-</string>
    <string name="presence_prefix">presence-</string>
    <string name="channel_created">Channel was created.</string>
    <string name="channel_creation_failed">Error creating channel.</string>

    <!-- Errors -->
    <string name="unknown_error">An unknown error occurred.</string>
    <string name="new_messages_have_arrived">New messages have arrived.</string>
    <string name="action_settings">Settings</string>
    <string name="channel_is_not_active">"Channel %1$s is not active."</string>
</resources>
