<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.redgeckotech.pushersample.view.CreateChannelActivityFragment"
            tools:showIn="@layout/activity_create_channel">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/channel_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/channel_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/channel_name"
                android:textAppearance="?android:textAppearanceLarge"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/channel_name_label"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/channel_type_prefix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/private_prefix"
                    android:textColor="@color/gray"
                    android:textAppearance="?android:textAppearanceMedium"
                    />

                <EditText
                    android:id="@+id/channel_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:inputType="textEmailAddress"
                    />

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/channel_type_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/channel_name_layout"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/channel_type"
                android:textAppearance="?android:textAppearanceLarge"
                />

            <RadioGroup
                android:id="@+id/channel_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <RadioButton
                    android:id="@+id/public_channel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/public_channel"
                    />

                <RadioButton
                    android:id="@+id/private_channel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/private_channel"
                    />

                <RadioButton
                    android:id="@+id/presence_channel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/presence_channel"
                    />

            </RadioGroup>
        </LinearLayout>

            <Button
                android:id="@+id/create_channel"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/channel_type_layout"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="16dp"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:paddingRight="16dp"
                android:paddingEnd="16dp"
                android:text="Create Channel"/>

    </RelativeLayout>
</ScrollView>
